#JC-2035 Fixed problems with the create topic buttons layout: 1. When text of the button is too long it should still be on the same   line (previously one line length limit was 120px). 2. When user had permission for the only one type of the topic   the "create topic" button had no text.

--- a/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
+++ b/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
@@ -1118,6 +1118,6 @@ pre.prettyprint {
 
 .new-topic-buttons {
     float: left;
-    width: 120px;
+    display: inline-block;
     margin-bottom: 10px;
 }
